# StreamDeck

./: .gitignore  README.md  arduino.ino  main.py
arduino/: arduino.ino
ui/: README.md
ui/src/: App.tsx  configStore.ts  index.css  main.tsx  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: config.rs  daemon.rs  keyboard.rs  main.rs  serial.rs  startup.rs  voicemeeter.rs
ui/src/components/: AdvancedSettings.tsx  ButtonGrid.tsx  KeybindModal.tsx  PinEditModal.tsx  QuickAssignModal.tsx
