[package]
name = "streamdeck-ui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["fs-exists", "fs-read-file", "fs-write-file", "fs-create-dir", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
enigo = "0.2"
libloading = "0.8"
parking_lot = "0.12"
once_cell = "1"
auto-launch = "0.5"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation"] }
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
